--- a/net/ndi/Cargo.toml
+++ b/net/ndi/Cargo.toml
@@ -14,10 +14,15 @@ gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/g
 gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+anyhow = "1.0"
 byte-slice-cast = "1"
 byteorder = "1.0"
+data-encoding = "2.4.0"
 atomic_refcell = "0.1"
 libloading = "0.8"
+quick-xml = "0.30"
+smallvec = { version = "1.11", features = ["const_generics"] }
+thiserror = "1.0"
 
 [build-dependencies]
 gst-plugin-version-helper = { path = "../../version-helper" }
