--- a/net/hlssink3/Cargo.toml
+++ b/net/hlssink3/Cargo.toml
@@ -15,7 +15,7 @@ glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16", version
 gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16", version = "0.16" }
 once_cell = "1.7.2"
 m3u8-rs = "5.0"
-regex = "1"
+sprintf = "0.1.3"
 
 [dev-dependencies]
 gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19" }
