webrtcsink: add custom signaller example
Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1388>

--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -93,3 +93,6 @@ name = "webrtcsink-stats-server"
 
 [[example]]
 name = "webrtcsink-high-quality-tune"
+
+[[example]]
+name = "webrtcsink-custom-signaller"
