--- a/version-helper/Cargo.toml
+++ b/version-helper/Cargo.toml
@@ -14,3 +14,4 @@ rust-version = "1.64"
 
 [dependencies]
 chrono = { version = "0.4.23", default-features = false, features = ["std", "clock"] }
+toml_edit = { version = "0.20", default-features = false }
