ci: Run cargo-deny on the whole workspace with all features enabled
Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1350>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -344,7 +344,7 @@ deny:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
   script:
-    - cargo deny check
+    - cargo deny --color=always --workspace --all-features check all
 
 outdated:
   extends: '.debian:12-stable'
