--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -93,3 +93,6 @@ name = "webrtcsink-stats-server"
 
 [[example]]
 name = "webrtcsink-high-quality-tune"
+
+[package.metadata.gstreamer]
+release_date = "2023-10-04"
