--- a/net/rtp/Cargo.toml
+++ b/net/rtp/Cargo.toml
@@ -14,18 +14,26 @@ atomic_refcell = "0.1"
 bitstream-io = "2.1"
 byte-slice-cast = "1.2"
 chrono = { version = "0.4", default-features = false }
-gst     = { workspace = true, features = ["v1_20"] }
+gst       = { workspace = true, features = ["v1_20"] }
 gst-audio = { workspace = true, features = ["v1_20"] }
-gst-rtp = { workspace = true, features = ["v1_20"] }
+gst-base  = { workspace = true, features = ["v1_20"] }
+gst-net   = { workspace = true, features = ["v1_20"] }
+gst-rtp   = { workspace = true, features = ["v1_20"] }
 gst-video = { workspace = true, features = ["v1_20"] }
+futures = "0.3"
+gio.workspace = true
 hex = "0.4.3"
+log = "0.4"
 once_cell.workspace = true
 rand = { version = "0.8", default-features = false, features = ["std", "std_rng" ] }
 rtp-types = { version = "0.1" }
+rtcp-types = { git = "https://github.com/ystreet/rtcp-types", version = "0.0" }
 slab = "0.4.9"
 smallvec = { version = "1.11", features = ["union", "write", "const_generics", "const_new"] }
 thiserror = "1"
 time = { version = "0.3", default-features = false, features = ["std"] }
+# TODO: experiment with other async executors (mio, async-std, etc)
+tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time"] }
 
 [dev-dependencies]
 gst-check = { workspace = true, features = ["v1_20"] }
@@ -56,4 +64,4 @@ versioning = false
 import_library = false
 
 [package.metadata.capi.pkg_config]
-requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-rtp-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
+requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-rtp-1.0, gstreamer-net-1.0, gobject-2.0, glib-2.0, gmodule-2.0, gio-2.0"
