--- a/net/rtp/Cargo.toml
+++ b/net/rtp/Cargo.toml
@@ -9,14 +9,19 @@ description = "GStreamer Rust RTP Plugin"
 rust-version.workspace = true
 
 [dependencies]
-bitstream-io = "2.0"
-gst      = { workspace = true, features = ["v1_20"] }
-gst-rtp  = { workspace = true, features = ["v1_20"]}
+atomic_refcell = "0.1"
+bitstream-io = "2.1"
 chrono = { version = "0.4", default-features = false }
+gst     = { workspace = true, features = ["v1_20"] }
+gst-rtp = { workspace = true, features = ["v1_20"] }
 once_cell.workspace = true
+rand = { version = "0.8", default-features = false, features = ["std", "std_rng" ] }
+rtp-types = { version = "0.1" }
+smallvec = { version = "1.11", features = ["union", "write", "const_generics", "const_new"] }
 
 [dev-dependencies]
 gst-check = { workspace = true, features = ["v1_20"] }
+gst-app   = { workspace = true, features = ["v1_20"] }
 
 [build-dependencies]
 gst-plugin-version-helper.workspace = true
