--- a/meson_options.txt
+++ b/meson_options.txt
@@ -28,7 +28,7 @@ option('onvif', type: 'feature', value: 'auto', description: 'Build onvif plugin
 option('raptorq', type: 'feature', value: 'auto', description: 'Build raptorq plugin')
 option('reqwest', type: 'feature', value: 'auto', description: 'Build reqwest plugin')
 option('rtp', type: 'feature', value: 'auto', description: 'Build rtp plugin')
-option('webrtc', type: 'feature', value: 'auto', description: 'Build webrtc plugin')
+option('webrtc', type: 'feature', value: 'auto', yield: true, description: 'Build webrtc plugin')
 option('webrtchttp', type: 'feature', value: 'auto', description: 'Build webrtchttp plugin')
 
 # text
