--- a/net/ndi/Cargo.toml
+++ b/net/ndi/Cargo.toml
@@ -9,11 +9,11 @@ edition = "2021"
 rust-version = "1.70"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/gtk-rs-core"}
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
+gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
+gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
+gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
 anyhow = "1.0"
 byte-slice-cast = "1"
 byteorder = "1.0"
@@ -28,8 +28,7 @@ thiserror = "1.0"
 gst-plugin-version-helper = { path = "../../version-helper" }
 
 [features]
-default = ["interlaced-fields", "sink"]
-interlaced-fields = ["gst/v1_16", "gst-video/v1_16"]
+default = ["sink"]
 sink = ["gst/v1_18", "gst-base/v1_18"]
 advanced-sdk = []
 static = []
