--- a/version-helper/Cargo.toml
+++ b/version-helper/Cargo.toml
@@ -10,8 +10,8 @@ license = "MIT"
 homepage = "https://gstreamer.freedesktop.org"
 keywords = ["gstreamer", "multimedia", "cargo"]
 edition = "2021"
-rust-version = "1.66"
+rust-version = "1.67"
 
 [dependencies]
 chrono = { version = "0.4.23", default-features = false, features = ["std", "clock"] }
-toml_edit = { version = "0.20", default-features = false }
+toml_edit = { version = "0.21", default-features = false, features = ["parse"] }
