--- a/deny.toml
+++ b/deny.toml
@@ -169,6 +169,12 @@ version = "0.7"
 name = "tracing-log"
 version = "0.1"
 
+# proc-macro-crate depends on an older version of toml_edit
+# https://github.com/bkchr/proc-macro-crate/pull/41
+[[bans.skip]]
+name = "toml_edit"
+version = "0.20"
+
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
