--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -337,6 +337,7 @@ deny:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
   script:
+    - cargo update --color=always
     - cargo deny --color=always --workspace --all-features check all
 
 outdated:
@@ -349,7 +350,8 @@ outdated:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
   script:
-    - cargo outdated --root-deps-only --exit-code 1 -v
+    - cargo update --color=always
+    - cargo outdated --color=always --root-deps-only --exit-code 1 -v
 
 coverage:
   allow_failure: true
