--- a/deny.toml
+++ b/deny.toml
@@ -175,6 +175,35 @@ version = "0.20"
 name = "itertools"
 version = "0.11"
 
+# Various crates depend on old versions of the windows crates
+[[bans.skip]]
+name = "windows_x86_64_msvc"
+version = "0.48"
+[[bans.skip]]
+name = "windows_x86_64_gnullvm"
+version = "0.48"
+[[bans.skip]]
+name = "windows_x86_64_gnu"
+version = "0.48"
+[[bans.skip]]
+name = "windows_i686_msvc"
+version = "0.48"
+[[bans.skip]]
+name = "windows_i686_gnu"
+version = "0.48"
+[[bans.skip]]
+name = "windows_aarch64_msvc"
+version = "0.48"
+[[bans.skip]]
+name = "windows_aarch64_gnullvm"
+version = "0.48"
+[[bans.skip]]
+name = "windows-targets"
+version = "0.48"
+[[bans.skip]]
+name = "windows-sys"
+version = "0.48"
+
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
