deny: Update for duplicated crypto-bigint dependency
Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1410>

--- a/deny.toml
+++ b/deny.toml
@@ -204,6 +204,11 @@ version = "0.48"
 name = "windows-sys"
 version = "0.48"
 
+# Various crates depend on an older version of crypto-bigint
+[[bans.skip]]
+name = "crypto-bigint"
+version = "0.4"
+
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
