--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "audio/spotify",
 
     "generic/file",
+    "generic/originalbuffer",
     "generic/sodium",
     "generic/threadshare",
     "generic/inter",
@@ -65,6 +66,7 @@ default-members = [
     "audio/claxon",
     "audio/lewton",
 
+    "generic/originalbuffer",
     "generic/threadshare",
     "generic/inter",
 
