meson: remove trailing whitespace and add comma
Cleanup without functional change.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1456>

--- a/meson.build
+++ b/meson.build
@@ -62,7 +62,7 @@ deps = [
   ['gstreamer-app-1.0', 'gst-plugins-base', 'app_dep', 'gstapp'],
   ['gstreamer-audio-1.0', 'gst-plugins-base', 'audio_dep', 'gstaudio'],
   ['gstreamer-base-1.0', 'gstreamer', 'gst_base_dep', 'gst_base'],
-  ['gstreamer-video-1.0', 'gst-plugins-base', 'video_dep', 'gstvideo']  
+  ['gstreamer-video-1.0', 'gst-plugins-base', 'video_dep', 'gstvideo'],
 ]
 
 if get_option('threadshare').allowed() \
