meson: Add nasm to PATH if meson can find it
Fixes rav1e build on Windows when built inside the monorepo.

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1457>

--- a/meson.build
+++ b/meson.build
@@ -339,8 +339,12 @@ if get_option('gtk4').allowed()
   endif
 endif
 
-if get_option('rav1e').allowed() and find_program('nasm', required: false).found()
-  features += 'gst-plugin-rav1e/asm'
+if get_option('rav1e').allowed()
+  nasm = find_program('nasm', required: false)
+  if nasm.found()
+    features += 'gst-plugin-rav1e/asm'
+    extra_env += {'NASM': nasm.full_path()}
+  endif
 endif
 
 if get_option('default_library') == 'static'
