--- a/net/aws/Cargo.toml
+++ b/net/aws/Cargo.toml
@@ -21,10 +21,10 @@ aws-types = "1.0"
 aws-credential-types = "1.0"
 bytes = "1.0"
 futures = "0.3"
-gio = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "gio" }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
+gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "master" }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_16"] }
 percent-encoding = "2"
 tokio = { version = "1.0", features = [ "full" ] }
 serde = "1"
@@ -36,7 +36,7 @@ once_cell = "1"
 [dev-dependencies]
 chrono = { version = "0.4", features = [ "alloc" ] }
 env_logger = "0.10"
-gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
+gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_18"] }
 rand = "0.8"
 test-with = { version = "0.12", default-features = false }
 
