--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -14,14 +14,14 @@ reqwest = { version = "0.11", features = ["cookies", "gzip"] }
 futures = "0.3"
 headers = "0.3"
 mime = "0.3"
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
 tokio = { version = "1.0", default-features = false, features = ["time", "rt-multi-thread"] }
 once_cell = "1"
 
 [dev-dependencies]
 hyper = { version = "0.14", features = ["server"] }
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
 
 [lib]
 name = "gstreqwest"
