--- a/net/rtp/Cargo.toml
+++ b/net/rtp/Cargo.toml
@@ -10,13 +10,13 @@ rust-version = "1.70"
 
 [dependencies]
 bitstream-io = "2.0"
-gst      = { package = "gstreamer",      git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
-gst-rtp  = { package = "gstreamer-rtp",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"]}
+gst      = { package = "gstreamer",      git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_20"] }
+gst-rtp  = { package = "gstreamer-rtp",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_20"]}
 chrono = { version = "0.4", default-features = false }
 once_cell = "1"
 
 [dev-dependencies]
-gst-check = { package = "gstreamer-check",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
+gst-check = { package = "gstreamer-check",  git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", features = ["v1_20"] }
 
 [build-dependencies]
 gst-plugin-version-helper = { path = "../../version-helper" }
