--- a/text/regex/Cargo.toml
+++ b/text/regex/Cargo.toml
@@ -14,6 +14,7 @@ regex = "1.5"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "main"
 package="gstreamer"
 
 [lib]
@@ -26,6 +27,7 @@ gst-plugin-version-helper = { path="../../version-helper" }
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "main"
 package="gstreamer-check"
 
 [features]
