--- a/text/wrap/Cargo.toml
+++ b/text/wrap/Cargo.toml
@@ -15,6 +15,7 @@ once_cell = "1"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "main"
 package="gstreamer"
 
 [lib]
@@ -27,6 +28,7 @@ gst-plugin-version-helper = { path="../../version-helper" }
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "main"
 package="gstreamer-check"
 
 [features]
