--- a/utils/tracers/Cargo.toml
+++ b/utils/tracers/Cargo.toml
@@ -9,7 +9,7 @@ description = "GStreamer Rust tracers plugin"
 rust-version = "1.70"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
 anyhow = "1"
 regex = "1"
 once_cell = "1"
