--- a/video/png/Cargo.toml
+++ b/video/png/Cargo.toml
@@ -9,14 +9,14 @@ rust-version = "1.70"
 description = "GStreamer Rust PNG encoder/decoder"
 
 [dependencies]
-gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst_video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
+gst_video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
 png = "0.17.2"
 once_cell = "1"
 parking_lot = "0.12"
 
 [dev-dependencies]
-gst_check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst_check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main" }
 
 [lib]
 name = "gstrspng"
