--- a/video/webp/Cargo.toml
+++ b/video/webp/Cargo.toml
@@ -14,10 +14,12 @@ once_cell = "1"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "main"
 package="gstreamer"
 
 [dependencies.gst-video]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "main"
 package="gstreamer-video"
 
 [dev-dependencies]
@@ -25,6 +27,7 @@ pretty_assertions = "1"
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "main"
 package="gstreamer-check"
 
 [lib]
